--- a/html/04.html
+++ b/html/04.html
@@ -12,7 +12,7 @@
     	<img src="../images/logo.png" alt="">
     	<ul class="hhead">
     	    <li>
-    	        <a href="../index01.html" target="_blank">首页<span></span></a>
+    	        <a href="../index.html" target="_blank">首页<span></span></a>
     	    </li>
     	    <li>
     	        <a href="02.html" target="_blank">行程定制<span></span></a>
